<resources>
    <string name="app_name">My SQL Db Demo</string>
    <string name="hint_edit_text_password">password</string>
    <string name="hint_user_name">User name</string>
    <string name="login_form_title">Login Form</string>
    <string name="login_button">Login</string>
    <string name="register_now_button">Register now</string>
    <string name="registration_form_title">Registration Form</string>
    <string name="hint_reg_form_name">name</string>
    <string name="hint_reg_form_user_name">User Name</string>
    <string name="new_register">Register</string>
</resources>
