<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pfariasmunoz.mysqldbdemo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_form_title"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="22sp"
        />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edit_text_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_button"
        android:layout_marginTop="10dp"
        android:onClick="userLogin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_now_button"
        android:layout_marginTop="50dp"
        android:onClick="userRegister"/>


</LinearLayout>
